# rag_chat_app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  RAPIDOCR_MODELS_INFO.md  README.md  app.py  check_rapidocr_models.py  deploy.sh  env_settings.json  openapi.json  pyproject.toml  requirements.txt
config/: __init__.py  env.py  i18n.py  logging.py  paths.py
db/: __init__.py  mongo.py
models/: __init__.py  settings.py
rag/: __init__.py  ingest.py  pinecone_utils.py
services/: __init__.py  bootstrap.py
tests/: test_change_password.py  test_settings.py
ui/: __init__.py  admin.py  change_password.py  chat.py  ingest.py  password.py
utils/: __init__.py  chunk.py  ids.py
